[gd_scene load_steps=3 format=3 uid="uid://c1mpp85jd1tk5"]

[ext_resource type="Script" uid="uid://d8dv4j7k8yu" path="res://scripts/items/ItemPickup.gd" id="1_71355"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7s3i8"]
size = Vector2(24, 24)

[node name="ItemPickup" type="Area2D"]
script = ExtResource("1_71355")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 10)
shape = SubResource("RectangleShape2D_7s3i8")

[node name="VisualPlaceholder" type="ColorRect" parent="."]
offset_right = 20.0
offset_bottom = 20.0

[node name="ItemTextureSprite" type="Sprite2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
